Updated the en folder as well as the image folder to include the review inputs. added a new help file for adddatapath page.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6974 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/help/en/createifolder.html
+++ b/simias/src/admin/help/en/createifolder.html
@@ -55,7 +55,8 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 <div id="helpcontent"> 
   
   <H3><A NAME="newuser"></A>Creating a New iFolder </H3>
- <P>Use this interface to create a new iFolder, select an owner and additional member for it.</P>
+  <P>Use this interface to create a new iFolder, select an owner and add additional 
+    members to it.</P>
  <BLOCKQUOTE CLASS="blockquote">
   <A HREF="#createifolder" TARGET="_self">Create a New iFolder</A><BR>
  <A HREF="#owner" TARGET="_self">Selecting an Owner For the New iFolder</A><BR>
@@ -104,7 +105,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
  
 <OL><LI>
       <P>On the Additional member selection page, use the search tool to locate 
-        the desired users .</P>
+        the desired users.</P>
 	  
     </LI>
     <LI>
