--- a/simias/src/admin/help/en/ifolders.html
+++ b/simias/src/admin/help/en/ifolders.html
@@ -56,18 +56,31 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
        --> 
   <h3 class="head3b">Managing iFolders</h3>
   <p> Use this interface to manage the ownership, policies, and membership of 
-    a selected iFolder for a user's Novell iFolder&reg; 3.6 account on the given 
-    iFolder domain. The search tool helps you locate the account you want to manage. 
-  </p>
-	
+    a selected iFolder for a user's iFolder 3.6 account on the given iFolder domain. 
+    The search tool helps you locate the account you want to manage. </p>
+	<BLOCKQUOTE CLASS="blockquote"><P><A HREF="#search" TARGET="_self">Searching for 
+an iFolder</A> <BR><A HREF="#browse" TARGET="_self">Browsing 
+the iFolders in the Search Results 
+ </A><BR><A HREF="#enable" TARGET="_self">Enabling, Disabling and Deleting an iFolder</A><BR><A HREF="#newuser" TARGET="_self">Creating a New iFolder</A>
+ </P></BLOCKQUOTE>
   
-  <H3><A NAME="search"></A>Searching for 
-an iFolder</H3><H4>Retrieving a List of iFolders on the Server</H4><P>Use one 
+  <H3><A NAME="search"></A>Searching For an iFolder</H3>
+<H4>iFolder Types</H4>
+<p>Icon <img src="../../images/ifolder.png" width="16" height="16" alt="Shared icon"> 
+    indicates that the iFolder is Normal.<br>
+Icon <img src="../../images/ifolder_user_16.gif" width="16" height="16" alt="Shared icon"> 
+    indicates that the iFolder is Shared.<br>
+	
+  Icon <img src="../../images/encrypt_ifolder.gif" width="16" height="16" alt="Shared icon"> 
+    indicates that the iFolder is Encrypted.</p>
+
+<H4>Retrieving a List of iFolders on the Server</H4><P>Use one 
 or more of the following search methods, then click Search:</P><UL><LI><P>Select 
 Equals as the filter criterion, then type the name of the iFolder you want to 
-locate in the Search iFolders field.</P></LI><LI><P>Select a filter criterion 
-(Contains, Begins With, Ends With, Equals) for the name of the iFolder, then type 
-one or more letters in the Search iFolders field.</P></LI><LI><P>Type an asterisk 
+locate in the Search iFolders field.</P></LI><LI>
+      <P>Select a filter criterion ( Begins With, Ends With, Contains, Equals) for the name 
+        of the iFolder, then type one or more letters in the Search iFolders field.</P>
+    </LI><LI><P>Type an asterisk 
 (*) in the Search iFolders field to return a list of all iFolders on the system.</P></LI><LI><P>Leave 
 the Search iFolders field empty to return a list of all iFolders on the system.</P></LI></UL>
   <P>Do not click anywhere in the page until the page completely refreshes; then 
@@ -120,8 +133,7 @@ the iFolders in the Search Results</H4>
     A short description about the iFolder.<br>
        
   </BLOCKQUOTE>
-  <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top" TITLE="Go to top"></A></P>
-  
+ 
   <h4>Accessing the iFolders Details Page</h4><br>
   
   <ol>
@@ -134,8 +146,7 @@ the iFolders in the Search Results</H4>
         tab. <br>
         <br>
         The iFolder Details page will display the iFolder details, a list of members 
-        who own or share the iFolders, and policy settings for this particular 
-        iFolder. </p>
+        who own or share with, and policy settings for the current iFolder. </p>
     </li>
   </ol>
   <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P>
