--- a/simias/src/admin/help/en/users.html
+++ b/simias/src/admin/help/en/users.html
@@ -83,12 +83,7 @@ the Users in the Search Results</H4>
   <P>Scroll up and down to browse the search results and locate the user you want 
     to manage. The combination of the username and the first and last names help 
     to identify the user you want.</P>
-  <H4><A NAME="sort"></A>Sorting 
-the Users in the Search Results</H4>
-  <P>Your search results are initially displayed by username in alphabetical order. 
-    Click the column heading link to initiate the sort with that column as the 
-    primary key. Click the same heading link to initiate a sort in the reverse 
-    sort order.</P>
+  
   <BLOCKQUOTE><P><B>Type</B><BR>An 
 icon indicating whether the user has the iFolder Admin right (user wearing a referee-striped 
 uniform) or is a normal user (user icon).<BR><BR><B>Name</B><BR>
@@ -119,8 +114,11 @@ of the user account. </BLOCKQUOTE>
     </LI></ul>
   </OL>
 <H3><A NAME="newuser"></A>Creating a New iFolder User</H3><br>
- <BLOCKQUOTE><P><B><FONT SIZE="-1">NOTE:</FONT></B> <FONT SIZE="-1">You can create only non-LDAP users.
-</FONT></P></BLOCKQUOTE>
+  <BLOCKQUOTE> 
+    <P><B><FONT SIZE="-1">NOTE:</FONT></B> <FONT SIZE="-1">You can create only 
+      non-LDAP users. You can create them only when your iFolder server is not 
+      connected to the LDAP server.</FONT></P>
+  </BLOCKQUOTE>
 <OL><LI>
       <P>On the iFolder Users page, click New.</P>
 	  <P>The iFolder User creation page opens to the Users tab </P>
