--- a/simias/src/admin/help/en/member.html
+++ b/simias/src/admin/help/en/member.html
@@ -69,7 +69,7 @@ Tab </A></P></BLOCKQUOTE>
   <ol>
     <li> 
       <p>Log in to the Web Admin using Web Admin credentials.</p>
-      <p> The Users tab displays the user&#146;s type (admin user or user), username, 
+      <p> The Users page displays the user&#146;s type (admin user or user), username, 
         user's full name (if available), the server to which the user is provisioned, 
         and the user status (Enabled or Disabled). </p>
     </li>
@@ -80,9 +80,9 @@ Tab </A></P></BLOCKQUOTE>
     <li> 
       <p>Click the user's name link to open the User Details page. <br>
         <br>
-        The User page opens to the Users tab, which displays the user details, 
-        iFolders owned, and shared and policy settings for this particular user 
-        account. </p>
+        The User Details page opens to the Users tab, which displays the user 
+        details, iFolders owned, and shared and policy settings for this particular 
+        user account. </p>
     </li>
   </ol>
 <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P>
@@ -92,9 +92,9 @@ Tab </A></P></BLOCKQUOTE>
   <ol>
     <li> 
       <p>On the Web Admin console, click the iFolders tab.</p>
-      <p> iFolders tab displays the iFolder type (admin user or user), iFolder 
-        name, iFolder owner, members, the date the iFolder was last modified and 
-        the iFolder size. </p>
+      <p> iFolders page displays the iFolder type (admin user or user), iFolder 
+        name, iFolder owner, members, the date when iFolder was last modified 
+        and the iFolder size. </p>
     </li>
     <li> 
       <p>Use the search tool to locate the iFolder you want to manage using the 
@@ -105,26 +105,25 @@ Tab </A></P></BLOCKQUOTE>
         tab. <br>
         <br>
         The iFolder Details page displays the iFolder details, list of members 
-        who own or share the iFolders and policy settings for this particular 
-        iFolder. </p>
+        who own or share the iFolders and policy settings for the current iFolder. 
+      </p>
     </li>
   </ol>
   
     <H3><a name="iFolders"></a>Systems Tab</H3><br>
-  
-  
   <ol>
     <li> 
       <p>On the Web Admin console, click the Systems tab.</p>
-      <p> The Systems page displays the system settings and list of iFolder administrators.</p>
+      <p> The Systems page displays the system settings and list of iFolder administrators. 
+        With System page, you can  manage the policy settings for the whole system. </p>
     </li>
     <li> 
       <p>Locate the iFolder Administrator you want to manage. You can add or delete 
         iFolder Administrator.</p>
-		<p> You can also manage the policy settings for the Admin user.</p>
+      <p> You can also manage the policy settings for the Admin user.</p>
     </li>
     <li> 
-      <p>Click the Admin user's Name link to open the User Details page. <br>
+      <p>Click the Admin user's name link to open the User Details page. <br>
         <br>
         The User Details page opens to the Users tab, which displays the user 
         details, iFolders owned, and shared and policy settings for this particular 
@@ -139,8 +138,8 @@ Tab </A></P></BLOCKQUOTE>
     <li> 
       <p>On the Web Admin console, click the Servers tab.</p>
       <p> The Servers page displays the server type (Master or Slave), server 
-        name, DNS name, public IP Address, private IP address, and atatus of the 
-        selected server.</p>
+        name, public IP Address, private IP address, and status of the selected 
+        server.</p>
     </li>
     <li>
 <p>Use the search tool to locate the Server you want to manage. 
@@ -150,7 +149,7 @@ Tab </A></P></BLOCKQUOTE>
     <li> 
       <p>Click the Server name link to open the Servers Details page. <br>
         <br>
-        The Server Details page opens to the Servers tab, which displays server details, server status, server logs, and server reports, and to set the log level. </p>
+        The Server Details page displays server details, server type (Master or Slave), DNS name, server status, server logs, server reports, log level, LDAP details and iFolder Data Store. </p>
     </li>
   </ol>
 <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P>
@@ -162,7 +161,7 @@ Tab </A></P></BLOCKQUOTE>
   </li>
   <li>
       <p>Configure reporting according to the frequency and time schedule you want, then generate the output as desired.</p>
-	  
+	  <p>You can save the the generated report in the directory specified on Reports page.</p>
   </li>
   </ol>
   <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></p>
