--- a/simias/src/admin/help/en/reports.html
+++ b/simias/src/admin/help/en/reports.html
@@ -59,6 +59,9 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <h3 class="head3b">Reports</h3>
   <p> Use this interface to enable reporting and generate reports for iFolder 
     and Directories. It generate reports based on the frequency you select.</p>
+  
+  
+
   <OL>
     <LI> 
       <P>Select Enable Reporting to enable reporting. </P>
@@ -72,16 +75,26 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     </LI>
     <LI> 
       <P>Select the output option from the given options (Report iFolder, Report 
-        Directories) </P>
+        Directory) </P>
+      <p>If you select Report Directory, the generated report is automatically 
+        saved to the report directory under the data path you have specified during 
+        simias server set-up. 
+      <p>For example, &lt;data path&gt;/simias/report.</p>
+      <p> If you select Report iFolder, the generated report is saved to the Report 
+        iFolder.</p> <p>The Report iFolder, named &lt; domain name&gt;-&lt;server name&gt;-Reports 
+        is automatically created for each server that you configure during simias 
+        server set-up.</p>
     </LI>
     <LI> 
       <P>Select the format for generating the report. </P>
     </LI>
+    <LI>Click Save to save the settings.</LI>
+    <p> Click Cancel to cancel the settings.</p>
   </OL>
   <P> 
 <A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
 Related Topics</H4><BLOCKQUOTE class="task1"><P><A HREF="serverdetails.html">Server Details
-</A><BR><A HREF="ifolderdetails.html">Managing iFolder Details</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><P>&nbsp;</P><P CLASS="copyright">A 
+</A><BR><A HREF="ifolderdetails.html">Managing iFolder Details</A></P></BLOCKQUOTE><P><P CLASS="copyright">A 
 trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, <SUP><SMALL>TM</SMALL></SUP>, 
 etc.) denotes a Novell trademark. An asterisk (*) denotes a third-party 
 trademark. For more information, see <A HREF="imgr_legalnotices.html" TARGET="_self" ><font color="#cfcdc6">Legal 
