updated to include the updates from kali on multi volume etc
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6975 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/help/en/adddatapath.html
+++ b/simias/src/admin/help/en/adddatapath.html
@@ -64,11 +64,13 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     </li>
     <P> 
     <BLOCKQUOTE> <B> Name</B><BR>
-      Assign a name to the Data Store, such as default store. <BR>
+      Assign a unique name to the Data Store, such as ifolder-store. <BR>
       <BR>
       <B> Path</B><BR>
-      Enter the path you have specified during simias server setup.<br>
-      </blockquote>
+      Enter the path where the new volume is mounted.<p> If it is a remote volume 
+      (CIFS, NFS, AFP), then ensure that the volume is mounted on every restart 
+      for proper functioning and load balancing.<br>
+    </blockquote>
   </ol>
   
    
