--- a/simias/src/admin/help/en/ifolderdetails.html
+++ b/simias/src/admin/help/en/ifolderdetails.html
@@ -509,7 +509,7 @@ of the iFolder, a subscription notification is sent to the user's iFolder accoun
       <p> The iFolder (collection) policy</p>
     </li>
   </ul>  
-        <P> Default value: Enabled, 10 Minutes</P>
+        <P> Default value: Disabled, client-set limit</P>
       </TD>
 </TR></TABLE><BR><P> 
   <P>&nbsp; </P>
