--- a/simias/src/admin/help/en/reports.html
+++ b/simias/src/admin/help/en/reports.html
@@ -77,13 +77,12 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
       <P>Select the output option from the given options (Report iFolder, Report 
         Directory) </P>
       <p>If you select Report Directory, the generated report is automatically 
-        saved to the report directory under the data path you have specified during 
-        simias server set-up. 
+        saved to the report directory under the default data path. 
       <p>For example, &lt;data path&gt;/simias/report.</p>
       <p> If you select Report iFolder, the generated report is saved to the Report 
-        iFolder.</p> <p>The Report iFolder, named &lt; domain name&gt;-&lt;server name&gt;-Reports 
-        is automatically created for each server that you configure during simias 
-        server set-up.</p>
+        iFolder.</p> 
+      <p>The Report iFolder, named &lt; domain name&gt;-&lt;server name&gt;-Reports 
+        is automatically created for each server for the admin user.</p>
     </LI>
     <LI> 
       <P>Select the format for generating the report. </P>
