--- a/simias/src/admin/help/en/systeminfo.html
+++ b/simias/src/admin/help/en/systeminfo.html
@@ -197,7 +197,7 @@ a different username with the iFolder Admin right to continue managing the serve
           individual user quotas. Any existing user quota always overrides a system-wide 
           quota, whether the user quota is lower or higher than the system-wide 
           quota.</P>
-        <P>Default value: 100 MB</P>
+        <P>Default value: Disabled, No limit</P>
         </TD></TR>
   <TR><TD VALIGN="TOP">
         <h4>File Size</h4>
@@ -225,7 +225,7 @@ the maximum file size that can be synchronized.</P>
           the file system on the user's computer. For example, FAT32 volumes have 
           a maximum file size of 4 GB minus 1 byte. </p>
                 
-        <p>Default value: Disabled, 1 MB</p>   
+        <p>Default value: Disabled, No limit</p>   
       </TD></TR>
   <TR>
       <TD VALIGN="TOP"> 
@@ -245,8 +245,8 @@ the maximum file size that can be synchronized.</P>
 	    <p>Specifies the minimum synchronization interval in minutes.</P>
         <P>If this option is enabled, specifies the minimum interval for synchronizing 
           iFolder data for each user account. Larger values are more restrictive. 
-        </P>    <P>If the option is disabled, the value is No Limit. Default value:10 
-          minutes </P>
+        </P>    
+        <P>If the option is disabled, the default value client-set limit </P>
         </TD></TR>
   <TR><TD VALIGN="TOP">
         <h4>Encryption</h4>
