--- a/simias/src/admin/help/en/servers.html
+++ b/simias/src/admin/help/en/servers.html
@@ -103,7 +103,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
     </li>
     <li> 
       <p>Click the Server's name link to open the Server Details page to the Servers 
-        page.</p>
+        page.</p><p><B><FONT SIZE="-1">Important:</FONT></B> <FONT SIZE="-1"> The information you can view from this page is specific only to the server currently you have logged in. For any modification, you need to login to the respective server's web admin console.</font></p>
           </li>
   </ol>
 <P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P>
