updated the file with minor change ifolders to ifolder users
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6977 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/help/en/details.html
+++ b/simias/src/webaccess/help/en/details.html
@@ -97,7 +97,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
         <P>Members</P>
         (view only)
       </TD><TD>
-        <P>Reports the total number of iFolders belong to the iFolder. 
+        <P>Reports the total number of users belong to the iFolder. 
       </TD></TR><TR><TD VALIGN="TOP">
         <P>Files</P>
         (view only)
