updated to remove typo
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6980 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/help/en/systeminfo.html
+++ b/simias/src/admin/help/en/systeminfo.html
@@ -263,7 +263,7 @@ the maximum file size that can be synchronized.</P>
 		
         <br><B>Enforced</B><BR>
         Select Enforced to enable the encryption feature for all the users. When 
-        it is set to Enforced, a user cannot change the encryption settings for 
+        it is set to Enforced, user cannot change the encryption settings for 
         his or her iFolders.<br>
 		
       </TD></TR>
