--- a/src/admin/help/en/ldapsettings.html
+++ b/src/admin/help/en/ldapsettings.html
@@ -126,20 +126,28 @@ eDirectory<sup><small>TM</small></sup> object. </P>
         <P>To edit a value, select it, make your changes, then click <i>OK</i> to apply 
           the changes.</P>  
   
-        <P>During LDAP synchronization, the iFolder server queries the LDAP server 
-          to retrieve a list of users in the DNs (as specified in the <i>LDAP 
-          Contexts</i> field) at the specified synchronization interval. The usernames 
-          in the iFolder domain are matched against this official LDAP list. Any 
-          new user in the specified LDAP contexts is added to the iFolder domain. 
-          If a user is no longer in the specified LDAP contexts, the username 
-          is removed from the domain, any iFolders the user owns are orphaned 
-          and reassigned to the iFolder Admin user, and the user is removed as 
-          a member of other iFolders.</P>
         <P>The iFolder Admin User is provisioned for servers during the install. 
           It is tracked by its GUID, so it is available even if you do not specify 
           a container, group, or user, or if you specify search DNs that do not 
           contain the Folder Admin user. This identity must be provisioned to 
           enable the iFolder Admin to perform management tasks.</P>
+        <P>LDAP synchronization can be scheduled or performed manually by 
+        clicking the <i>Sync Now</i> button. On performing LDAP synchronization, the 
+        iFolder server queries the LDAP server and retrieves list of users from 
+        the DN specified in the <i>LDAP Context</i> field. The usernames in the iFolder 
+        domain are compared with the LDAP list. If a user is added or deleted 
+        from the specified LDAP context, the iFolder domain is also subsequently 
+        updated.</P>
+        <P>Even if a user is deleted from the LDAP context, the first LDAP 
+        synchronization only disables the user from the iFolder domain 
+        regardless of the Grace Interval Policy. The disabled user is never 
+        deleted automatically after the grace interval period and continues to 
+        exist in the iFolder domain in a disabled state. If this user is 
+        configured again within the grace interval period, the user becomes 
+        active with all the iFolders. After the Grace Interval period, the 
+        subsequent LDAP synchronization deletes the user from the iFolder domain 
+        and all the iFolders of the user are orphaned. The orphaned iFolders 
+        are reassigned to the iFolder Admin user.</P>
       </TD></TR>
   </TABLE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A></P><H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
 Related Topics</H4><BLOCKQUOTE class="task1">
