--- a/src/webaccess/help/en/changepassword.html
+++ b/src/webaccess/help/en/changepassword.html
@@ -4,7 +4,7 @@
 
 <!-- Novell iFolder 3.x Web Access  --> 
 
-<title>Uploading Files</title> 
+<title>Create Folders</title> 
 
 <!-- Metadata --> 
   <meta name="Author" content="iFolder 3.x Documentation Manager"> 
@@ -38,25 +38,31 @@
 <tr> <td width="221"><img src="../../images/help_title.gif" alt="Novell iFolder" border="0" width="221" height="26"></td>
   <td align="right" width="100%" class="tabCell" style="background-image: url('../../images/header_background.gif'); background-repeat: no-repeat"> 
 </td></tr> </table></div><!-- This is end of the Help Banner Layer --> 
-<!-- This is the start of the Help Content Layer --> <div id="helpcontent" style="left: 10px; top: 38px"> 
-<!-- The Page Heading uses CSS style "head3b". This creates an H3 header
+<!-- This is the start of the Help Content Layer --> 
+<div id="helpcontent" style="left: 10px; top: 38px"> 
+  <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
-       --> 
-  <h3 class="head3b"><a name="top"></a>Upload 
-a File</h3>
-  <ol><li>
-      <p>In the Upload File field, click Browse to locate the local file you want 
-        to upload.</p>
-    </li><li>
-      <p> Select the file, and then click Open &gt; Upload.</p>
-    </li> When the page 
-refreshes, the file appears alphabetically in the list. By default, if you 
-      upload a file with the same file name, it will be overwritten. If you do 
-      not want to overwrite existing files, clear the
-      <span id="OverWriteExistingFile">Overwrite existing files check box.</span><br>
-&nbsp;</ol>
-  
-<a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
+       -->
+  <h3>Changing the password</h3> 
+   
+  <p>To change the password of your iFolder account, follow the steps given 
+  below:</p>
+      <ol>
+        <li>Ensure that the <i>Change Password</i> check box is selected. This 
+        check box is selected by default and the password change fields become 
+        editable only if this check box is selected. </li>
+        <li>Specify your current password in the <i>Current Password</i> field.</li>
+        <li>Specify the password that you want to set for the current iFolder 
+        account in the&nbsp; <i>New Password</i> field.</li>
+        <li>Specify the new password again for confirmation in the <i>Confirm New Password </i>field.</li>
+        <li>Click <i>Save </i>to save your changes.</li>
+  </ol>
+  <p>Note: iFolder changes password directly in the LDAP server. If the same 
+  LDAP server is a user management source for other applications, then the new 
+  password <br>
+  will be applicable to those applications as well. <br>
+&nbsp;</p>
+      <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
 <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
 Related Topics</H4><BLOCKQUOTE class="task1"><P ><A HREF="home.html">Accessing Your iFolders</A><BR><A HREF="details.html">Viewing iFolder Properties
 </A><BR><A HREF="members.html">Managing iFolder Members</A></P></BLOCKQUOTE><P><A HREF="#top" TARGET="_self"><IMG SRC="../../images/goto_top.gif" WIDTH="19" HEIGHT="19" BORDER="0" ALT="Go to top"></A><P CLASS="copyright">A trademark symbol (<SUP><SMALL>&reg;</SMALL></SUP>, 
