--- a/src/webaccess/help/en/details.html
+++ b/src/webaccess/help/en/details.html
@@ -20,8 +20,7 @@
        <!--
        
          body           {  font-family: Arial, Helvetica, Geneva;
-									background: white
-url(../../images/helphead_bg.gif) repeat-x 0% 0% }
+									background: white url('../../images/helphead_bg.gif') repeat-x;  }
 		      
          #headgraphic    { position: absolute; z-index: 0; top: 0px; left: 0px;
 									width: 100%; visibility: visible }
@@ -39,8 +38,9 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
    <body bgcolor="white" marginwidth="0" marginheight="0" 
          leftmargin="0" topmargin="0">
 <!-- This is the start of the Help Banner Layer --> <div id="headgraphic"> 
-<table border="0" cellspacing="0" cellpadding="0" width="100%" height="26" style="margin:0px; padding:0px; background-image: url(../../images/header_pattern.gif); background-repeat: repeat-x;"> 
-<tr> <td width="221"><img src="../../images/help_title.gif" alt="Novell iFolder" border="0" width="221" height="26"></td><td align="right" width="100%" class="tabCell" style="background-image: url(../../images/header_background.gif); background-repeat: no-repeat;"></td></tr></table></div><!-- This is end of the Help Banner Layer --> 
+<table border="0" cellspacing="0" cellpadding="0" width="100%" height="26" style="margin:0px; padding:0px; background-image: url('../../images/header_pattern.gif'); background-repeat: repeat-x"> 
+<tr> <td width="221"><img src="../../images/help_title.gif" alt="Novell iFolder" border="0" width="221" height="26"></td>
+  <td align="right" width="100%" class="tabCell" style="background-image: url('../../images/header_background.gif'); background-repeat: no-repeat"></td></tr></table></div><!-- This is end of the Help Banner Layer --> 
 <!-- This is the start of the Help Content Layer --> <div id="helpcontent"> 
 <!-- The Page Heading uses CSS style "head3b". This creates an H3 header
             with a line beneath it.
@@ -76,11 +76,10 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
       </TD><TD>
         <P>Displays the date when the iFolder was created.</p>
       </TD></TR><TR><TD VALIGN="TOP">
-        <P>Access</P>
+        <P>Rights</P>
         (view only)
       </TD><TD>
-        <P>Displays the username of the iFolder member who is currently accessing 
-          the iFolder.</p>
+        <P>Displays the rights that the iFolder owner has on the iFolder.</p>
       </TD></TR><TR><TD VALIGN="TOP">
         <P>Owner</P>
         (view only)
