--- a/src/webaccess/help/en/legalnotices.html
+++ b/src/webaccess/help/en/legalnotices.html
@@ -67,15 +67,11 @@ to notify any person or entity of such revisions or changes.</p>
     International Trade Services Web page </a> for more information on exporting 
     Novell software. Novell assumes no responsibility for your failure to obtain 
     any necessary export approvals.</p>
-  <h3>Copyright</h3>
-  <p>Copyright &copy; 2005-2007 Novell, Inc. All rights reserved. No part of this 
-    publication may be reproduced, photocopied, stored on a retrieval system, 
-    or transmitted without the express written consent of the publisher.</p>
   <h3>Novell Trademarks</h3><p>For Novell trademarks, see <a href=http://www.novell.com/company/legal/ trademarks/tmlist.html>the Novell Trademark and Service Mark list</a> </p><h3>Third-Party Trademarks</h3><p>All third-party trademarks are 
 the property of their respective owners.</p><h3>Documentation Conventions</h3><p>This 
 documentation uses a greater-than symbol (&gt;) to separate actions within a step 
 and items in a cross-reference path.</p><p>A trademark symbol (<sup><small>&reg;</small></sup>, 
-<sup><small>TM</small></sup>, etc.) denotes a Novell trademark. An asterisk (*) 
+<sup><small>TM</small></sup>) denotes a Novell trademark. An asterisk (*) 
 denotes a third-party trademark.</p></div>
 </body>
 </html>
