checking in web admin help files for fate id-305579
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7093 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/help/en/ifolderdetails.html
+++ b/src/admin/help/en/ifolderdetails.html
@@ -56,7 +56,10 @@
        --> 
   <h3 class="head3b">Managing iFolder Details</h3>
   <p> Use this interface to 
-manage the ownership, policies, and membership of a selected iFolder. </p><BLOCKQUOTE CLASS="blockquote"><P><A HREF="#general" TARGET="_self">Viewing iFolder Details
+manage the ownership, policies, and membership of a selected iFolder. </p>
+  <p> <b>Note</b>: A secondary administrator can manage the 
+  policies of a selected iFolder based on the rights that a secondary 
+  administrator has on the selected iFolder.</p><BLOCKQUOTE CLASS="blockquote"><P><A HREF="#general" TARGET="_self">Viewing iFolder Details
 </A> <BR><A HREF="#members" TARGET="_self">Members 
  </A><BR><A HREF="#policies" TARGET="_self">Policies</A> </P></BLOCKQUOTE>
   
