--- a/src/admin/help/en/ifolders.html
+++ b/src/admin/help/en/ifolders.html
@@ -28,8 +28,7 @@
        <!--
        
          body           {  font-family: Arial, Helvetica, Geneva;
-									background: white
-url(../../images/helphead_bg.gif) repeat-x 0% 0% }
+									background: white url('../../images/helphead_bg.gif') repeat-x;  }
 		      
          #headgraphic    { position: absolute; z-index: 0; top: 0px; left: 0px;
 									width: 380px; visibility: visible }
@@ -58,6 +57,11 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
   <p> Use this interface to manage the ownership, policies, and membership of 
     a selected iFolder for an iFolder user account on the given iFolder domain. 
     The search tool helps you locate the account you want to manage. </p>
+  <p> <b>Note:</b> When you are logged-in as a secondary 
+  administrator, you can view only those iFolders that are owned by users for 
+  which you are designated as a secondary administrator. Also, you can manage 
+  the iFolders only depending on the rights available to you to manage the 
+  iFolders.</p>
 	<BLOCKQUOTE CLASS="blockquote"><P><A HREF="#search" TARGET="_self">Searching for 
 an iFolder</A> <BR><A HREF="#browse" TARGET="_self">Browsing 
 the iFolders in the Search Results 
