--- a/src/admin/help/en/reports.html
+++ b/src/admin/help/en/reports.html
@@ -28,8 +28,7 @@
        <!--
        
          body           {  font-family: Arial, Helvetica, Geneva;
-									background: white
-url(../../images/helphead_bg.gif) repeat-x 0% 0% }
+									background: white url('../../images/helphead_bg.gif') repeat-x;  }
 		      
          #headgraphic    { position: absolute; z-index: 0; top: 0px; left: 0px;
 									width: 380px; visibility: visible }
@@ -64,7 +63,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
 
   <OL>
     <LI> 
-      <P>Select Enable Reporting to enable reporting. </P>
+      <P>Select Enable reporting to enable reporting. </P>
     </LI>
     <LI> 
       <P>Select the frequency from the given options (Daily, Weekly, Monthly). 
@@ -74,7 +73,7 @@ url(../../images/helphead_bg.gif) repeat-x 0% 0% }
       <P>Select the time when you want to generate the report .</P>
     </LI>
     <LI> 
-      <P>Select the output option from the given options (Report iFolder, Report 
+      <P>Select the location where you want to save reports from the given options (Report iFolder, Report 
         Directory) </P>
       <p>If you select Report Directory, the generated report is automatically 
         saved to the report directory under the default data path. 
