--- a/src/admin/help/en/serverdetails.html
+++ b/src/admin/help/en/serverdetails.html
@@ -29,8 +29,7 @@
        <!--
        
          body           {  font-family: Arial, Helvetica, Geneva;
-									background: white
-url(../../images/helphead_bg.gif) repeat-x 0% 0% }
+									background: white url('../../images/helphead_bg.gif') repeat-x;  }
 		      
          #headgraphic    { position: absolute; z-index: 0; top: 0px; left: 0px;
 									width: 380px; visibility: visible }
@@ -308,7 +307,7 @@ can view the following information:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLA
         <P>Shows the unique name you have specified for the Data Store.</P>
 		
       </TD><TR><TD VALIGN="TOP">
-        <P>Full Path</P>
+        <P>Full path</P>
       </TD>
       <TD> 
         <P>Shows the path to the Data Store, where the volume is mounted on. This 
@@ -316,7 +315,7 @@ can view the following information:</P><TABLE WIDTH="93%" BORDER="1"><TR><TD CLA
           using the web interface.</P>
 		
       </TD><TR><TD VALIGN="TOP">
-        <P>Free Space</P>
+        <P>Free space</P>
       </TD>
       <TD> 
         <P>Shows the space available in the volume.</P>
