Made changes related to iFolder session expiration after password change. fate id:306319
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7095 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/webaccess/help/en/changepassword.html
+++ b/src/webaccess/help/en/changepassword.html
@@ -60,7 +60,10 @@
   <p>Note: iFolder changes password directly in the LDAP server. If the same 
   LDAP server is a user management source for other applications, then the new 
   password <br>
-  will be applicable to those applications as well. <br>
+  will be applicable to those applications as well. After you change your 
+  password, the iFolder session will expire and you will be logged out. You must 
+  then log in again to connect to iFolder services.<br>
+  <br>
 &nbsp;</p>
       <a href="#top" target="_self"><img src="../../images/goto_top.gif" width="19" height="19" border="0" alt="Go to top"></a>
 <H4 CLASS="ruleabove"><IMG SRC="../../images/xrefbtn.gif" WIDTH="16" HEIGHT="16" ALT="Related Topics" align="top"> 
